# anvil

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  anvil-architecture.md
.github/workflows/: ci.yml
plans/: phase1-interactive-mvp.md
prd/: 001-phase1-interactive-mvp.md
src/: error.rs  lib.rs  main.rs
src/cli/: add.rs  apply.rs  init.rs  mod.rs  sync.rs
src/config/: local.rs  manifest.rs  mod.rs
src/git/: mod.rs
src/linker/: mod.rs
src/ui/: mod.rs  prompt.rs  spinner.rs  summary.rs  theme.rs
tests/: apply_test.rs  init_test.rs  sync_test.rs
