[package]
name = "anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
inquire = "0.7"
indicatif = "0.17"
console = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
thiserror = "2"
dirs = "6"
whoami = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
